<resources>
    <string name="app_name">ECE InfoKiosk</string>
    <string name="action_settings">Settings</string>
    <string name="faculty_prompt">Faculty</string>
    <string name="map_prompt">Map</string>
    <string name="clubs_prompt">Orgs</string>
    <string name="clubs_full">Organizations</string>
    <string name="events_prompt">Events</string>
    <string name="games_prompt">Games</string>
    <string name="info_prompt">Info</string>
    <string name="height_prompt">Tap Here to Lower Controls</string>
    <string name="greeting_prompt">Welcome to the ECE Kiosk!</string>
    <string name="departments">Select a Department</string>
    <string name="chemical">Chemical &amp; &#xD;Biomedical</string>
    <string name="electrical">Electrical &amp; &#xD;Computer</string>
    <string name="mechanical">Mechanical</string>
    <string name="industrial">Industrial &amp; &#xD;Manufacturing</string>
    <string name="civil">Civil &amp; &#xD;Environmental</string>
    <string name="back_prompt">Back</string>
    <string name="title_activity_chem">Chem</string>
    <string name="build_1">First Floor</string>
    <string name="build_2">Second Floor</string>
    <string name="build_3">Third Floor</string>
    <string name="info_title">College Information</string>
    <string name="info_text">\tDear Prospective Students, Parents, Supporters and Friends:\n
\n
Welcome to the info kiosk for the Department of Electrical &amp; Computer Engineering (ECE) at the FAMU-FSU College of Engineering, a joint program between Florida A&amp;M University (FAMU) and Florida State University (FSU), established in 1983.\n
\n
The Department of ECE presently has 28 dedicated and diverse faculty members with strong research capabilities, including 2 National Academy of Inventors (NAI) Fellows. Active areas of research include energy storage materials and devices, renewable energy, advanced power systems, robotics, embedded systems, solid state and electromagnetic simulations, photonics, computer security, smart grids, resilient power networks, digital signal and image processing, wireless communications, and intelligent systems.\n
\n
We offer ABET-accredited B.S. programs in electrical engineering and computer engineering with over 450 undergraduate students, and M.S. and Ph.D. programs in electrical engineering with over 100 graduate students. We also offer 4+1 BS MS degree and international 3+1+1 BS MS programs. The Department has strong research ties with several research centers such as the Center for Advanced Power Systems (CAPS), the Aeropropulsion, Mechatronics, and Energy (AME) Center, Center for Intelligent, Systems, Control, and Robotics (CISCOR), High-Performance Materials Institute (HPMI), National High Magnetic Field Laboratory (NHMFL), and Applied Superconductivity Center (ASC).\n
\n
The mission of the Department of Electrical &amp; Computer Engineering is to provide an innovative academic undergraduate program of excellence to its majors; to produce graduates whose academic achievements match or exceed those of recognized state supported engineering colleges; to produce a greater number of graduates from groups traditionally underrepresented in electrical engineering; and to achieve national and international recognition through the excellence of its faculty and students research and scholarly pursuits, as well as their professional and service endeavors.\n
\n
We hope you will find the information you are looking for in these pages, and if you have any questions please feel free to contact our department. I look forward to personally welcoming you to our department and College.\n
\n
\tSimon Y. Foo\n
\tProfessor and Chair</string>
    <string name="orgs_text">The COE offers a variety of organizations that students can join to be more involved on campus. Below is a list of organizations and contact info.</string>
    <string name="event_text">The remaining events for the school year are as follows:\n

\tEngineering Exam Week: April 30th - May 4\n
\tEngineering Graduation: May 5</string>
    <string name="correct_prompt">Correct!</string>
    <string name="incorrect_prompt">Incorrect!</string>
    <string name="next_prompt">Next Question</string>
    <string name="trivia_title">Trivia Game</string>
    <string name="quest_1">What year was the Department of Electrical and Computer Engineering established? </string>
    <string name="q1a">1983</string>
    <string name="q1b">1851</string>
    <string name="q1c">1954</string>
    <string name="q1d">1997</string>
    <string name="quest_2">This professor was elected to the National Academy of Inventors, a feat that only 581 other people world wide have accomplished.</string>
    <string name="q2a">Dr. Rodney Roberts</string>
    <string name="q2b">Dr. Ming Yu</string>
    <string name="q2c">Dr. Jianping Zheng</string>
    <string name="q2d">Dr. Uwe Meyer-Baese</string>
    <string name="quest_3">How many credit hours does an ECE major need to graduate?</string>
    <string name="q3a">120</string>
    <string name="q3b">124</string>
    <string name="q3c">128</string>
    <string name="q3d">132</string>
    <string name="quest_4">Which of these ECE professors completed all of their schooling at the FSU-FAMU College of Engineering?</string>
    <string name="q4a">Dr. Walid Hadi</string>
    <string name="q4b">Dr. Jerris Hooker</string>
    <string name="q4c">Dr. Hui Li</string>
    <string name="q4d">Dr. Reginald Perry</string>
    <string name="alamo">Rufina Alamo, Ph.D.</string>
    <string name="chella">Ravidran Chella, Ph.D.</string>
    <string name="chung">Hoyong Chung, Ph.D.</string>
    <string name="finney">Wright Finney, Ph.D.</string>
    <string name="grant">Samuel Grant, Ph.D.</string>
    <string name="guan">Jingjiao Guan, Ph.D.</string>
    <string name="andrei">Petru Andrei, Ph.D.</string>
    <string name="arghandeh">Reza Arghandeh, Ph.D.</string>
    <string name="arora">Rajendra K. Arora, Ph.D.</string>
    <string name="barnes">Jerome Barnes</string>
    <string name="bernadin">Shonda Bernadin, Ph.D.</string>
    <string name="brooks">Geoffrey Brooks, Ph.D.</string>
    <string name="harvey">Bruce A. Harvey, Ph.D.</string>
    <string name="ldebrunner">Linda S. DeBrunner, Ph.D.</string>
    <string name="vdebrunner">Victor DeBrunner, Ph.D.</string>
    <string name="edrington">Chris S. Edrington, Ph.D.</string>
    <string name="faruque">Omar Faruque, Ph.D.</string>
    <string name="foo">Simon Y. Foo, Ph.D.</string>
    <string name="hadi">Walid A. Hadi, Ph.D.</string>
    <string name="islam">Md. Shafiul Islam, Ph.D.</string>
    <string name="hooker">Jerris Hooker, Ph.D.</string>
    <string name="kwan">Bing W. Kwan, Ph.D.</string>
    <string name="li">Hui Li, Ph.D.</string>
    <string name="lipo">Thomas Lipo, Ph.D.</string>
    <string name="mcginnis">Roger D. McGinnis, Ph.D.</string>
    <string name="meyer">Uwe H. Meyer-Baese, Ph.D.</string>
    <string name="moss">Pedro Moss, Ph.D.</string>
    <string name="pamidi">Sastry V. Pamidi, Ph.D., MBA</string>
    <string name="perry">Reginald J. Perry, Ph.D.</string>
    <string name="roberts">Rodney Roberts, Ph.D.</string>
    <string name="steurer">Michael Steurer, Ph.D.</string>
    <string name="tung">Leonard J. Tung, Ph.D.</string>
    <string name="weatherspoon">Mark H. Weatherspoon, Ph.D.</string>
    <string name="yu">Ming Yu, Ph.D.</string>
    <string name="zheng">Jim P. Zheng, Ph.D.</string>
    <string name="andrei_bio">
        Office: AME Building 213\n
        (850) 410-6589\n
        (850) 645-0137\n
        pandrei@eng.famu.fsu.edu\n
        Education\n
        \tPh.D., ECE, University of Maryland, College Park, 2004\n
        \tM.S., Physics, Al. I. Cuza University, Romania, 1999\n
        \tB.S., Physics, Al. I. Cuza University, Romania, 1997\n
        Research Interests\n
        \tMagnetics\n
        \tElectrochemical systems\n
        \tNano and power electronic devices\n
        \tNoise and hysteresis\n\n
        Petru Andrei received his Ph.D. in Electrical and Computer Engineering from the University of Maryland, College Park in 2004 and his M.S. and B.S. in Physics from the Alexandru I. Cuza University in Romania. He joined the FAMU-FSU College of Engineering in Fall 2004.\n
        Dr. Andrei is working on the modeling and simulation of nanoscale and power semiconductor devices, energy storage devices, magnetic materials, and on computational electromagnetics. He is particularly interested in the modeling of metal-air and Li-ion batteries, supercapacitors, fuel cells, analysis of fluctuations, variability, and noise in electronic devices, quantum induced effects in nanoscale devices, redesign and optimization techniques, inverse problems, modeling and analysis of the magnetic properties of nanostructure systems, fast multipole methods, hysteresis, and thermal relaxation phenomena in nanostructures.\n
        Dr. Andrei is a member of the Institute of Electrical and Electronics Engineers (IEEE) and American Physical Society (APS) and is currently serving as referee for numerous journals.
    </string>
    <string name="harvey_bio">
        Office: A344\n
        (850) 410-6451\n
        bharvey@fsu.edu\n
        Education\n
        \tPh.D., Electrical Engineering, Georgia Institute of Technology, 1991\n
        \tM.S., Electrical Engineering, University of Alabama in Huntsville, 1987\n
        \tB.E.E., Auburn University, 1984\n
        Research Interests\n
        \tWireless Communication and Networks\n
        \tSpread-spectrum communications\n
        \tReal-time DSP in communication systems\n
        \tRemote data collection and lightning surge suppression/protection\n\n
        Dr. Bruce Harvey (S\'81–M\'84–S\'88–M\'91–SM\'98) was born in Stoughton, Massachusetts, USA on December 20, 1961. He received the B.E.E. (Co-op, Highest Honor) from Auburn University in 1984. He received the M.S.E.E. from the University of Alabama in Huntsville in 1987 and the Ph.D. in Electrical Engineering from Georgia Institute of Technology in 1991 specializing in communications theory and error control coding.\n
        In September 1997 he joined the Department of Electrical and Computer Engineering at the FAMU-FSU Joint College of Engineering in Tallahassee, Florida, and currently holds the rank of Associate Professor. Dr. Harvey was the Associate Chair of the Department of Electrical and Computer Engineering from 2004-2010, and is once again serving in this capacity (since 2013). He was a Research Engineer I at the Georgia Tech Research Institute (GTRI) from 1984-1986 and a Lead Engineer at Phase IV Systems, Inc. from 1986-1988. From 1991-1997 he was a Research Engineer II and then Senior Research Engineer in the Communications Division of GTRI.\n
        His current fields of interest include wireless communication, error control coding, telecommunication systems, and spread-spectrum communications.\n
    </string>
</resources>